# BatteryManagementSystem

./: CMakeLists.txt
ConfigFiles/: configA.json
docs/: class.puml  class_diagram.puml  component_diagram.puml  components.puml  sequence_diagram.puml
include/: CEnergyContext.hpp  CGrid.hpp  CHouse.hpp  CPVPanel.hpp  CReadConfig.hpp  CStorageFactory.hpp  CStorageSystem.hpp  CSupplyFromPVStrategy.hpp  CSupplyFromStorageStrategy.hpp  CVendorABattery.hpp  CVendorABatteryAdapter.hpp  CVendorBInverter.hpp  CVendorBInverterAdapter.hpp  CVendorXController.hpp  CVendorXControllerAdapter.hpp  IBattery.hpp  IController.hpp  IEnergyContext.hpp  IEnergyStrategy.hpp  IInverter.hpp  IObservable.hpp  IObserver.hpp
src/: CEnergyContext.cpp  CHouse.cpp  CMakeLists.txt  CPVPanel.cpp  CReadConfig.cpp  CStorageFactory.cpp  CStorageSystem.cpp  CSupplyFromPVStrategy.cpp  CSupplyFromStorageStrategy.cpp  CVendorABattery.cpp  CVendorABatteryAdapter.cpp  CVendorBInverterAdapter.cpp  CVendorXController.cpp  CVendorXControllerAdapter.cpp  main.cpp
tests/: CMakeLists.txt  Observer_test.cpp  ReadConfig_test.cpp  SupplyFromPVStrategy_test.cpp  SupplyFromStorageStrategy_test.cpp
tests/mocks/: MockIBattery.hpp  MockIController.hpp  MockIEnergyContext.hpp  MockIEnergyStrategy.hpp  MockIInverter.hpp  MockIObservable.hpp  MockIObserver.hpp
